--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,12 @@
 /* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
+ 
   "compileOnSave": false,
-  "compilerOptions": {
+  "compilerOptions": {   
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
+    "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "noImplicitOverride": true,
